# rust-schemer

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md
book/src/appendices/: references.md
book/src/internal/: crates.md
book/src/introduction/: scheme.md  schemer-repl.md
book/theme/: highlight.js
schemer-lang/: Cargo.toml  README.md
schemer-lang/src/: error.rs  lib.rs  parameters.rs  write.rs
schemer-lang/src/bootstrap/: mod.rs  predicates.scr
schemer-lang/src/eval/: callable.rs  environment.rs  expression.rs  forms.rs  libraries.rs  mod.rs  procedures.rs
schemer-lang/src/read/: datum.rs  mod.rs  syntax_str.rs  tokens.rs
schemer-lang/src/semantics/: mod.rs
schemer-lang/src/types/: booleans.rs  chars.rs  exceptions.rs  lists.rs  mod.rs  strings.rs  symbols.rs  vector.rs
schemer-lang/src/types/numbers/: conv.rs  inf_nan.rs  mod.rs  op.rs
schemer-library/: Cargo.toml  README.md
schemer-library/data/: case-folding.rkt
schemer-library/src/: import.rs  lib.rs  macros.rs
schemer-library/src/builtins/: mod.rs  port.rs
schemer-library/src/forms/: import.rs  include.rs  library.rs  mod.rs
schemer-library/src/scheme/: base.rs  case_lambda.rs  char_folding.rs  chars.rs  complex.rs  cxr.rs  eval.rs  file.rs  inexact.rs  lazy.rs  lazy.scr  load.rs  mod.rs  process.rs  process_context.rs  r5rs.rs  read.rs  repl.rs  time.rs  write.rs
schemer-library/src/scheme/base/: mod.rs  numbers.rs  ports.rs  predicates.rs  strings.rs  types.rs  write.rs
schemer-library/src/schemer/: base.rs  chars.rs  environment.rs  environment_inquiry.rs  file.rs  lists.rs  load.rs  mod.rs  repl.rs
schemer-library/src/srfi/: mod.rs  srfi_112.rs
schemer-macros/: Cargo.toml
schemer-macros/src/: datum.rs  errors.rs  export.rs  expression.rs  lib.rs  library.rs  types.rs
schemer-parse/: Cargo.toml  README.md
schemer-parse/src/: from_str.rs  lib.rs  parser.rs  simple.pest
schemer-parse/tests/: datum_parsing.rs  lexical_write.rs  token_parsing.rs
schemer-repl/: Cargo.toml  README.md
schemer-repl/i18n/en/: schemer_repl.ftl
schemer-repl/src/: main.rs
schemer-vm/: Cargo.toml  LICENSE  README.md
schemer-vm/src/: error.rs  lib.rs
schemer-vm/src/file/: asm.rs  dis.rs  io.rs  mod.rs  parser.rs  secd.pest
schemer-vm/src/instructions/: mod.rs
schemer-vm/src/machine/: datum.rs  debugger.rs  execute.rs  instructions.rs  memory.rs  mod.rs
schemer-vm/tests/: asm_api.rs  asm_source.rs  dis.rs  execute.rs
src/: error.rs  lib.rs  newtype.rs
src/syntax/: datum.rs  mod.rs  parser.rs  simple.pest  tokens.rs
src/types/: booleans.rs  chars.rs  mod.rs  strings.rs  symbols.rs
src/types/numbers/: integer.rs  mod.rs  number.rs  rational.rs
src/types/numbers/complex/: exact.rs  inexact.rs  mod.rs
src/types/numbers/real/: exact.rs  inexact.rs  infnan.rs  mod.rs
test/lib/example/: grid.sr  life.sr
tests/: lexical_write.rs
