[package]
name = "schemer-lang"
description = "A pedantic implementation of the core R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/search_path/"
repository = "https://github.com/johnstonskj/rust-search_path.git"
license = "MIT"
readme = "README.md"
publish = true

[features]
default = []
char-names = ["unicode_names2"]

[dependencies]
lazy_static = "1.4"
num = "0.4"
paste = "1.0"
rust_decimal = "1.15"
search_path = "0.1"
unique_id = "0.1"

unicode_names2 = { version = "0.4", optional = true }

[dev-dependencies]
pretty_assertions = "0.7"
