[package]
name = "schemer-lang"
description = "A pedantic implementation of the core R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/schemer_lang/"
repository = "https://github.com/johnstonskj/rust-schemer.git"
license = "MIT"
readme = "README.md"
categories = ["compilers"]
keywords = ["language", "lisp", "scheme", "interpreter", "runtime"]
publish = true

[dependencies]
lazy_static = "1.4"
num = "0.4"
paste = "1.0"
rust_decimal = "1.15"
schemer-macros = { version = "0.1", path = "../schemer-macros" }
unique_id = "0.1"
unic-ucd-name = "0.9"

[dev-dependencies]
pretty_assertions = "0.7"
