[package]
name = "schemer-library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
num = "0.4"
schemer-parse = { version = "0.1", path = "../schemer-parse" }
schemer-lang = { version = "0.1", path = "../schemer-lang" }