[package]
name = "schemer-library"
description = "A pedantic implementation of the core R7RS Scheme language library in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/search_path/"
repository = "https://github.com/johnstonskj/rust-search_path.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
lazy_static = "1.4"
num = "0.4"
schemer-parse = { version = "0.1", path = "../schemer-parse" }
schemer-lang = { version = "0.1", path = "../schemer-lang" }