[package]
name = "schemer-library"
description = "A pedantic implementation of the core R7RS Scheme language library in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/schemer_library/"
repository = "https://github.com/johnstonskj/rust-schemer.git"
license = "MIT"
readme = "README.md"
categories = ["compilers"]
keywords = ["language", "lisp", "scheme", "library"]
publish = true

[dependencies]
lazy_static = "1.4"
num = "0.4"
schemer-parse = { version = "0.1", path = "../schemer-parse" }
schemer-lang = { version = "0.1", path = "../schemer-lang" }