[package]
name = "schemer-parse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
paste = "1.0"
pest = "2.1"
pest_derive = "2.1"
rust_decimal = "1.15"
schemer-lang = { version = "0.1", path = "../schemer-lang" }
pest_ascii_tree = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
