[package]
name = "schemer-parse"
description = "A pedantic parser for the R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/search_path/"
repository = "https://github.com/johnstonskj/rust-search_path.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
num = "0.4"
paste = "1.0"
pest = "2.1"
pest_derive = "2.1"
rust_decimal = "1.15"
schemer-lang = { version = "0.1", path = "../schemer-lang" }
pest_ascii_tree = "0.1"

[dev-dependencies]
pretty_assertions = "0.6"
