[package]
name = "schemer-parse"
description = "A pedagogical parser for the R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/schemer_parse/"
repository = "https://github.com/johnstonskj/rust-schemer.git"
license = "MIT"
readme = "README.md"
categories = ["compilers", "parser-implementations"]
keywords = ["language", "lisp", "scheme", "parser"]
publish = true


[dependencies]
num = "0.4"
paste = "1.0"
pest = "2.1"
pest_derive = "2.1"
rust_decimal = "1.15"
schemer-lang = { version = "0.1", path = "../schemer-lang" }
pest_ascii_tree = "0.1"

[dev-dependencies]
pretty_assertions = "1.0"
