[package]
name = "schemer-repl"
description = "A repl for the R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/search_path/"
repository = "https://github.com/johnstonskj/rust-search_path.git"
license = "MIT"
readme = "README.md"
publish = true

[dependencies]
colored = "2.0"
isatty = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
rustyline = "9.0"
search_path = "0.1"
schemer-parse = { version = "0.1", path = "../schemer-parse" }
schemer-lang = { version = "0.1", path = "../schemer-lang" }
schemer-library = { version = "0.1", path = "../schemer-library" }
structopt = "0.3"
xdirs = "0.1"
