[package]
name = "schemer-repl"
description = "A repl for the R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/schemer_repl/"
repository = "https://github.com/johnstonskj/rust-schemer.git"
license = "MIT"
readme = "README.md"
categories = ["compilers"]
keywords = ["language", "lisp", "scheme", "interpreter", "repl", "shell"]
publish = true

[dependencies]
atty = "0.2"
colored = "2.0"
log = "0.4"
pretty_env_logger = "0.4"
rustyline = "9.0"
rustyline-derive = "0.5"
search_path = "0.1"
schemer-parse = { version = "0.1", path = "../schemer-parse" }
schemer-lang = { version = "0.1", path = "../schemer-lang" }
schemer-library = { version = "0.1", path = "../schemer-library" }
structopt = "0.3"
xdirs = "0.1"
