[package]
name = "schemer-repl"
description = "A repl for the R7RS Scheme programming language in Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/schemer_repl/"
repository = "https://github.com/johnstonskj/rust-schemer.git"
license = "MIT"
readme = "README.md"
categories = ["compilers"]
keywords = ["language", "lisp", "scheme", "interpreter", "repl", "shell"]
publish = true

[dependencies]
atty = "0.2"
colored = "2.0"
human-panic = "1.0"
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6"
lazy_static = "1.4"
rustyline = "11.0"
rustyline-derive = "0.10"
search_path = "0.1"
schemer-parse = { version = "0.1", path = "../schemer-parse" }
schemer-lang = { version = "0.1", path = "../schemer-lang" }
schemer-library = { version = "0.1", path = "../schemer-library" }
structopt = "0.3"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xdirs = "0.1"
