[package]
name = "schemer-vm"
description = "An experimental SECD-based Virtual Machine for schemer."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/schemer_repl/"
repository = "https://github.com/johnstonskj/rust-schemer.git"
license = "MIT"
readme = "README.md"
categories = ["compilers"]
keywords = ["language", "lisp", "scheme", "virtual"]
publish = true

[dependencies]
num = "0.4"
pest = "2.1"
pest_derive = "2.1"
rust_decimal = "1.15"
schemer-lang = { version = "0.1", path = "../schemer-lang" }
schemer-parse = { version = "0.1", path = "../schemer-parse" }
pest_ascii_tree = "0.1"

[dev-dependencies]
pretty_assertions = "0.7"
